--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="wrapper">
         <header>
             <div class="logo">
-                <img src="logo.png" alt="">
+                <img src="assests/logo.png" alt="">
             </div>
 
             <div class="menu">
