--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="container">
                 <div class="person">
                     <span class="person-overlay"></span>
-                    <img src="profile.jpg" alt="">
+                    <img src="assests/profile.jpg" alt="">
                 </div>
                 <div class="home-text">
                     <h6 class="student">Student</h6>
