--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">About Me</a></li>
+                    <li><a href="Pages/About.html">About Me</a></li>
                     <li><a href="#">My Projects</a></li>
                     <li class="btn"><a href="#">Socials</a></li>
                 </ul>
