--- a/Pages/About.html
+++ b/Pages/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Bar Animation On Scroll Using HTML, CSS & Greesock JS</title>
+    <title>About Me</title>
     <style>
         *{
             margin: 0;
@@ -99,6 +99,24 @@
     </style> 
 </head>
 <body>
+    <div class="sectionfo centered">
+			<img src="../assets/Images/Me.png" class="myImg" alt="no image for you then lol">
+			<div class="descriptionn">
+				Hello there! My name is Paweł. I'm an <span id="age">17</span>-year-old creator from Eurasia.
+				I've been coding for the past <span id="codingtime">2</span> years.
+				I try not to limit myself to just one idea/technology. I've created stuff ranging from computer graphics
+				through music, videos, art, finishing on computer programs.
+				My goal is to be constantly doing something throughout my life. That way I always can look back at the
+				stuff I've made and
+				have a moment of being proud of seeing the progress.
+				My adventure with programming started when my father taught me the basics of c++ and algorithms.
+				Before programming, I was really into Blender, Video editing, and music creation.
+				Now I try not to slow down in development but apart from creating my stuff I'm trying to learn history
+				(Mainly XX century) and
+				languages (French and Russian) to be able to create things more efficiently and with better quality and
+				maybe even with the help of others.
+			</div>
+		</div>
 
     <section></section>
     <section></section>
