--- a/Pages/About.html
+++ b/Pages/About.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="sectionfo centered">
-			<img src="../assets/Profile.png" class="myImg" alt="no image for you then lol">
+			<img src="../assests/profile.jpg" class="myImg" alt="no image for you then lol">
 			<div class="descriptionn">
 				Hello there! My name is Sam. I'm an <span id="age">19</span>-year-old creator from India
 				I've been coding for the past <span id="codingtime">2</span> years.
