--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <ul class="glide__slides">
                             <li class="glide__slide">
                                 <div class="project-wrapper">
-                                    <img src="images/img2.jpg" alt="">
+                                    <img src="images/img2.png" alt="">
                                     <div class="project-about">
                                         <h3 class="p-heading">Web Music Player</h3>
                                         <p class="p-description">A Vanilla Web Music Player Made using js</p>
