--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     <div class="project-about">
                                         <h3 class="p-heading">Web Music Player</h3>
                                         <p class="p-description">A Vanilla Web Music Player Made using js</p>
-                                        <a href="https://7r4c3.github.io/Web-Music-Player/">View</a>
+                                        <a href="https://7r4c3.github.io/Web-Music-Player/" class="View-button btn">View</a>
                                         <a href="https://github.com/7R4C3/Web-Music-Player" class="social-item">
                                             <i class="fab fa-github social-icon"></i>
                                         </a>
