--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
     <!-- JavaScript Here-->
 
     <!-- Custom JavaScript -->
-    <script src="script/script.js"></script>
+    <script src="script/script.js></script>
+    <script src="https://tryhackme.com/badge/841090"></script>"
+   
 
     <!-- glider.js -->
     <script src="script/glide.min.js"></script>
