--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     <span class="heading">Tools</span>
                     <i class="fab fa-git"></i>
                 </div>
+                 <script src="https://tryhackme.com/badge/841090"></script>
             </div>
         </section> <!-- Skills Section end here -->
 
@@ -160,8 +161,7 @@
     <!-- JavaScript Here-->
 
     <!-- Custom JavaScript -->
-    <script src="script/script.js></script>
-    <script src="https://tryhackme.com/badge/841090"></script>"
+        <script src="script/script.js"></script>
    
 
     <!-- glider.js -->
