--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                     <span class="heading">Tools</span>
                     <i class="fab fa-git"></i>
                 </div>
-                 <script src="https://tryhackme.com/badge/841090"></script>
+                <div class="TryHackMe">
+                    <script src="https://tryhackme.com/badge/841090"></script>
+                </div>
             </div>
         </section> <!-- Skills Section end here -->
 
