--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="project-wrapper">
-                                    <img src="images/img1.jpg" alt="">
+                                    <img src="images/img1.png" alt="">
                                     <div class="project-about">
-                                        <h3 class="p-heading">Will be updated soon</h3>
-                                        <p class="p-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque est nobis quos quae qui quas
-                                        asperiores inventore odio iusto praesentium consequuntur magnam, impedit eaque
-                                        necessitatibus, accusantium maxime? Mollitia, a exercitationem.</p>
+                                        <h3 class="p-heading">Discord Server Nuker</h3>
+                                        <p class="p-description">Discord Nuker Coded In Python</p>                                  
+                                        <a href="https://github.com/7R4C3/DCNukeBot" class="social-item">
+                                            <i class="fab fa-github social-icon"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </li>
