--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="project-wrapper">
-                                    <img src="images/img1.png" alt="">
+                                    <img src="images/image1.png" alt="">
                                     <div class="project-about">
                                         <h3 class="p-heading">Discord Server Nuker</h3>
                                         <p class="p-description">Discord Nuker Coded In Python</p>                                  
