--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                             </li>
                             <li class="glide__slide">
                                 <div class="project-wrapper">
-                                    <img src="images/img2.jpg" alt="">
+                                    <img src="images/img3.png" alt="">
                                     <div class="project-about">
-                                        <h3 class="p-heading">Will be updated soon</h3>
-                                        <p class="p-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque est nobis quos quae qui quas
-                                        asperiores inventore odio iusto praesentium consequuntur magnam, impedit eaque
-                                        necessitatibus, accusantium maxime? Mollitia, a exercitationem.</p>
+                                        <h3 class="p-heading">This Website</h3>
+                                        <p class="p-description">A Simple HTML And CSS Website</p>
+                                         <a href="https://github.com/7R4C3/7R4C3.github.io" class="social-item">
+                                            <i class="fab fa-github social-icon"></i>
                                     </div>
                                 </div>
                             </li>
