--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </a>
                     <a href="https://www.instagram.com/7r4c3__/" class="social-item">
                         <i class="fab fa-instagram social-icon"></i>
-                    <a href="https://discordapp.com/users/922331284032868362/" class="social-item">
+                    <a href="discordapp.com/users/922331284032868362" class="social-item">
                         <i class="fab fa-discord social icon"></i>
                     </a>
                 </div>
