--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         class="link-text">Skills</span></a></li>
             <li class="nav-item"><a href="#contact" class="nav-link"><i class="fas fa-envelope link-icon"></i><span
                         class="link-text">Socials</span></a></li>
+            <li class="nav-item"><a href="#ctf" class="nav-link"><i class="fas fa-file-code link-icon"></i><span
+                        class="link-text">CTF</span></a></li> 
         </ul>
     </nav>
     <main>
@@ -116,18 +118,14 @@
         <section id="skills" class="main-item">
             <div class="container" id="skills-container">
                 <div class="languages">
-                    <span class="heading">Front-end</span>
+                    <span class="heading">Good At</span>
+                    <i class="fab fa-python"></i>
+                    <i class="fab fa-php"></i>
                     <i class="fab fa-js"></i>
-                    <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3"></i>
-                </div>
-                <div class="languages">
-                    <span class="heading">Back-end</span>
-                    <i class="fab fa-node"></i>
                 </div>
                 <div class="languages">
                     <span class="heading">Tools</span>
-                    <i class="fab fa-git"></i>
+                    <i class="fab fa-linux"></i>
                 </div>
                 <div class="TryHackMe">
                     <script src="https://tryhackme.com/badge/841090"></script>
