--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         class="link-text">Skills</span></a></li>
             <li class="nav-item"><a href="#contact" class="nav-link"><i class="fas fa-envelope link-icon"></i><span
                         class="link-text">Socials</span></a></li>
-            <li class="nav-item"><a href="#ctf" class="nav-link"><i class="fas fa-file-code link-icon"></i><span
+            <li class="nav-item"><a href="#ctf" class="nav-link"><i class="fas fa-flag link-icon"></i><span
                         class="link-text">CTF</span></a></li> 
         </ul>
     </nav>
