--- a/index.html
+++ b/index.html
@@ -157,7 +157,26 @@
                 </div>
             </div>
         </section><!-- Contact Section end here -->
-
+<!--ctf section starts -->
+        <section id="ctf" class="main-item">
+            <div class="container" id="ctf-container">
+                <div class="glide">
+                    <div class="glide__track" data-glide-el="track">
+                        <ul class="glide__slides">
+                            <li class="glide__slide">
+                                <div class="project-wrapper">
+                                    <img src="images/img3.png" alt="">
+                                    <div class="project-about">
+                                        <h3 class="p-heading">CTF-1</h3>
+                                        <p class="p-description">Steganography</p>
+                                         <a href="https://raw.githubusercontent.com/7R4C3/7R4C3.github.io/main/ctf/pexels-photo.png" class="social-item">
+                                            <i class="fab fa-flag social-icon"></i>
+                                         </a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
     </main> <!-- Main end here-->
 
     <!-- JavaScript Here-->
