--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                         <ul class="glide__slides">
                             <li class="glide__slide">
                                 <div class="project-wrapper">
-                                    <img src="images/img3.png" alt="">
+                                    <img src="images/Ctf-logo.png" alt="">
                                     <div class="project-about">
                                         <h3 class="p-heading">CTF-1</h3>
                                         <p class="p-description">Steganography</p>
                                          <a href="https://raw.githubusercontent.com/7R4C3/7R4C3.github.io/main/ctf/pexels-photo.png" class="social-item">
-                                            <i class="fab fa-flag social-icon"></i>
+                                            <i class="fa fa-download" aria-hidden="true"></i>
                                          </a>
                                     </div>
                                 </div>
