--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                             </li>
                         </ul>
                     </div>
+    <!--ctf section end here -->                
     </main> <!-- Main end here-->
 
     <!-- JavaScript Here-->
