--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
                             </li>
                         </ul>
                     </div>
+                    <li class="glide__slide">
+                                <div class="project-wrapper">
+                                    <img src="images/Ctf-logo.png" alt="">
+                                    <div class="project-about">
+                                        <h3 class="p-heading">CTF-2</h3>
+                                        <p class="p-description">Obfuscation</p>
+                                         <a href="https://raw.githubusercontent.com/7R4C3/7R4C3.github.io/main/ctf/obfuscation.js" class="social-item">
+                                            <i class="fa fa-download" aria-hidden="true"></i>
+                                         </a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
     <!--ctf section end here -->                
     </main> <!-- Main end here-->
 
