--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
                                     <img src="images/Ctf-logo.png" alt="">
                                     <div class="project-about">
                                         <h3 class="p-heading">CTF-1</h3>
-                                        <p class="p-description">Steganography</p>
-                                         <a href="https://raw.githubusercontent.com/7R4C3/7R4C3.github.io/main/ctf/pexels-photo.png" class="social-item">
+                                        <p class="p-description">Steganography</p>                                  
+                                        <a href="https://raw.githubusercontent.com/7R4C3/7R4C3.github.io/main/ctf/pexels-photo.png" class="social-item">
                                             <i class="fa fa-download" aria-hidden="true"></i>
-                                         </a>
+                                        </a>
                                     </div>
                                 </div>
                             </li>
                             <li class="glide__slide">
                                 <div class="project-wrapper">
-                                    <img src="images/Ctf-logo.png" alt="">
+                                    <img src="images/img3.png" alt="">
                                     <div class="project-about">
                                         <h3 class="p-heading">CTF-2</h3>
                                         <p class="p-description">Obfuscation</p>
@@ -189,6 +189,17 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="glide__arrows" data-glide-el="controls">
+                        <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="far fa-arrow-alt-circle-left"></i></button>
+                        <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="far fa-arrow-alt-circle-right"></i></button>
+                    </div>
+                    <div class="glide__bullets" data-glide-el="controls[nav]">
+                        <button class="glide__bullet" data-glide-dir="=0"></button>
+                        <button class="glide__bullet" data-glide-dir="=1"></button>
+                        <button class="glide__bullet" data-glide-dir="=2"></button>
+                    </div>
+                </div>
+            </div>
     <!--ctf section end here -->                
     </main> <!-- Main end here-->
 
